--- a/Gameplay/Scripting/Scripting.vcxproj
+++ b/Gameplay/Scripting/Scripting.vcxproj
@@ -59,6 +59,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ComponentCoroutineContinuation.hpp" />
+    <ClInclude Include="EntrySourceTemplate.inc" />
     <ClInclude Include="SystemInvokeScriptCoroutine.hpp" />
   </ItemGroup>
   <ItemGroup>
