--- a/Gameplay/Scripting/Scripting.vcxproj.filters
+++ b/Gameplay/Scripting/Scripting.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="SystemInvokeScriptCoroutine.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EntrySourceTemplate.inc">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CreateLib.cpp">
