detect if the asset handler is waiting for itself

--- a/Runtime/Asset/Asset.vcxproj
+++ b/Runtime/Asset/Asset.vcxproj
@@ -61,6 +61,7 @@
     <ClCompile Include="AssetManager.cpp" />
     <ClCompile Include="AssetQuery.cpp" />
     <ClCompile Include="Package\AssetPackageFilesystem.cpp" />
+    <ClCompile Include="SecondaryAssetHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Asset.hpp" />
