--- a/Platforms/Vulkan/Vulkan.vcxproj
+++ b/Platforms/Vulkan/Vulkan.vcxproj
@@ -44,6 +44,9 @@
     <Link>
       <SubSystem>Console</SubSystem>
     </Link>
+    <Lib>
+      <AdditionalDependencies>GenericCodeGend.lib;glslangd.lib;MachineIndependentd.lib;OSDependentd.lib;HLSLd.lib;OGLCompilerd.lib;SPIRVd.lib;SPVRemapperd.lib;glslang-default-resource-limitsd.lib;spirv-cross-cd.lib;spirv-cross-cored.lib;spirv-cross-cppd.lib;spirv-cross-glsld.lib;spirv-cross-hlsld.lib;spirv-cross-msld.lib;spirv-cross-reflectd.lib;spirv-cross-utild.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -57,18 +60,36 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
+    <Lib>
+      <AdditionalDependencies>GenericCodeGen.lib;glslang.lib;MachineIndependent.lib;OSDependent.lib;HLSL.lib;OGLCompiler.lib;SPIRV.lib;SPVRemapper.lib;glslang-default-resource-limits.lib;spirv-cross-c.lib;spirv-cross-core.lib;spirv-cross-cpp.lib;spirv-cross-glsl.lib;spirv-cross-hlsl.lib;spirv-cross-msl.lib;spirv-cross-reflect.lib;spirv-cross-util.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Assets\SahGlslCompiler.hpp" />
+    <ClInclude Include="Assets\SahShaderModule.hpp" />
+    <ClInclude Include="Assets\SahVulkanGraphicsPipelineBuilder.hpp" />
+    <ClInclude Include="Assets\ShaderModule.hpp" />
+    <ClInclude Include="Assets\SpirvBinary.hpp" />
     <ClInclude Include="Vulkan.hpp" />
     <ClInclude Include="VulkanEnum.hpp" />
+    <ClInclude Include="VulkanGraphicsPipeline.hpp" />
     <ClInclude Include="VulkanSwapchain.hpp" />
     <ClInclude Include="VulkanCommandListGraphics.hpp" />
     <ClInclude Include="VulkanGpuDevice.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Assets\SahGlslCompiler.cpp" />
+    <ClCompile Include="Assets\SahShaderModule.cpp" />
+    <ClCompile Include="Assets\SahVulkanGraphicsPipelineBuilder.cpp" />
+    <ClCompile Include="VulkanGraphicsPipeline.cpp" />
     <ClCompile Include="VulkanSwapchain.cpp" />
     <ClCompile Include="VulkanCommandListGraphics.cpp" />
     <ClCompile Include="VulkanGpuDevice.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Assets\SahJson\SahJson.vcxproj">
+      <Project>{07588673-2a24-4618-8eb5-025422004b68}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
