--- a/Assets/SahGraphicsCommon/SahGraphicsCommon.vcxproj
+++ b/Assets/SahGraphicsCommon/SahGraphicsCommon.vcxproj
@@ -12,8 +12,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{e51ee650-b088-4940-bee6-108c8a0ed508}</ProjectGuid>
-    <RootNamespace>Vulkan</RootNamespace>
+    <ProjectGuid>{6fd1b55e-e5ea-4b87-8453-6d5aa4793ac8}</ProjectGuid>
+    <RootNamespace>SahGraphicsCommon</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -24,7 +24,6 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>ClangCL</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -44,9 +43,6 @@
     <Link>
       <SubSystem>Console</SubSystem>
     </Link>
-    <Lib>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -60,30 +56,20 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
-    <Lib>
-      <AdditionalDependencies>
-      </AdditionalDependencies>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Vulkan.hpp" />
-    <ClInclude Include="VulkanEnum.hpp" />
-    <ClInclude Include="VulkanGraphicsPipeline.hpp" />
-    <ClInclude Include="VulkanShaderModule.hpp" />
-    <ClInclude Include="VulkanSwapchain.hpp" />
-    <ClInclude Include="VulkanCommandListGraphics.hpp" />
-    <ClInclude Include="VulkanGpuDevice.hpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="VulkanGraphicsPipeline.cpp" />
-    <ClCompile Include="VulkanSwapchain.cpp" />
-    <ClCompile Include="VulkanCommandListGraphics.cpp" />
-    <ClCompile Include="VulkanGpuDevice.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Assets\SahJson\SahJson.vcxproj">
-      <Project>{07588673-2a24-4618-8eb5-025422004b68}</Project>
+    <ProjectReference Include="..\..\IO\Graphics\Graphics.vcxproj">
+      <Project>{5ae8f2da-6b3e-4492-a009-112a62b056be}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\Runtime\Asset\Asset.vcxproj">
+      <Project>{8722e8a6-ddc8-4283-8dff-45cd15e7dc6f}</Project>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="SahGlslCompiler.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SahGlslCompiler.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
