--- a/Assets/SahGraphicsVulkan/SahGraphicsVulkan.vcxproj
+++ b/Assets/SahGraphicsVulkan/SahGraphicsVulkan.vcxproj
@@ -12,8 +12,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{e51ee650-b088-4940-bee6-108c8a0ed508}</ProjectGuid>
-    <RootNamespace>Vulkan</RootNamespace>
+    <ProjectGuid>{03d51201-90ed-429b-9920-37258df0389b}</ProjectGuid>
+    <RootNamespace>SahGraphicsVulkan</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -24,7 +24,6 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>ClangCL</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -44,9 +43,6 @@
     <Link>
       <SubSystem>Console</SubSystem>
     </Link>
-    <Lib>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -60,29 +56,21 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
-    <Lib>
-      <AdditionalDependencies>
-      </AdditionalDependencies>
-    </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Vulkan.hpp" />
-    <ClInclude Include="VulkanEnum.hpp" />
-    <ClInclude Include="VulkanGraphicsPipeline.hpp" />
-    <ClInclude Include="VulkanShaderModule.hpp" />
-    <ClInclude Include="VulkanSwapchain.hpp" />
-    <ClInclude Include="VulkanCommandListGraphics.hpp" />
-    <ClInclude Include="VulkanGpuDevice.hpp" />
+    <ClCompile Include="SahVulkanShaderModule.cpp" />
+    <ClCompile Include="SahVulkanGraphicsPipeline.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="VulkanGraphicsPipeline.cpp" />
-    <ClCompile Include="VulkanSwapchain.cpp" />
-    <ClCompile Include="VulkanCommandListGraphics.cpp" />
-    <ClCompile Include="VulkanGpuDevice.cpp" />
+    <ClInclude Include="SahVulkanShaderModule.hpp" />
+    <ClInclude Include="SahVulkanGraphicsPipeline.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Assets\SahJson\SahJson.vcxproj">
-      <Project>{07588673-2a24-4618-8eb5-025422004b68}</Project>
+    <ProjectReference Include="..\..\Platforms\Vulkan\Vulkan.vcxproj">
+      <Project>{e51ee650-b088-4940-bee6-108c8a0ed508}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\SahGraphicsCommon\SahGraphicsCommon.vcxproj">
+      <Project>{6fd1b55e-e5ea-4b87-8453-6d5aa4793ac8}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
