--- a/Runtime/Asset/Asset.vcxproj.filters
+++ b/Runtime/Asset/Asset.vcxproj.filters
@@ -18,45 +18,78 @@
     <ClCompile Include="Package\AssetPackageFilesystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="AssetManager.cpp">
+    <ClCompile Include="details\AssetEnum.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="AssetQuery.cpp">
+    <ClCompile Include="details\AssetPackageManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SecondaryAssetHandler.cpp">
+    <ClCompile Include="details\AssetPath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AssetManager2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="details\AssetBuilderRawMemoryView.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="details\AssetBuildTask.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="details\AssetAccessProxy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Asset.hpp">
+    <ClInclude Include="details\AssetEnum.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AssetManager.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Package\AssetPackage.hpp">
+    <ClInclude Include="AssetPackage.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Package\AssetPackageFilesystem.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AssetQuery.hpp">
+    <ClInclude Include="details\AssetQuery.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ServiceAssetManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SecondaryAssetHandler.hpp">
+    <ClInclude Include="details\AssetPackageManager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SecondaryAsset.hpp">
+    <ClInclude Include="details\AssetPath.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ComponentSecondaryAssetRef.hpp">
+    <ClInclude Include="AssetManager2.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="AssetDependencyGraph.hpp">
+    <ClInclude Include="AssetHasher.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Asset.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="details\AssetBuilder.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="details\AssetBuilderRawMemoryView.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="details\AssetDefs.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="details\AssetBuildTask.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="details\AssetAccessProxy.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="details\AssetRecord.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="details\AssetState.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
