--- a/Runtime/Asset/Asset.vcxproj.filters
+++ b/Runtime/Asset/Asset.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClCompile Include="AssetManager2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="details\AssetBuilderRawMemoryView.cpp">
+    <ClCompile Include="details\AbRawMemoryView.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="details\AssetBuildTask.cpp">
@@ -68,13 +68,10 @@
     <ClInclude Include="AssetHasher.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Asset.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="details\AssetBuilder.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="details\AssetBuilderRawMemoryView.hpp">
+    <ClInclude Include="details\AbRawMemoryView.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="details\AssetDefs.hpp">
@@ -90,6 +87,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="details\AssetState.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Asset.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="details\AssetRawMemoryView.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
