--- a/Runtime/Executive/Executive.vcxproj
+++ b/Runtime/Executive/Executive.vcxproj
@@ -71,8 +71,14 @@
     <ClCompile Include="ServiceAsyncWorker.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\Library\Usagi\Usagi.vcxproj">
+      <Project>{f9061c06-bce6-416b-9aeb-31351810b7ba}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\Common\Logging\Logging.vcxproj">
       <Project>{e13613a3-b719-4bc5-991a-507402d14c25}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Common\Time\Time.vcxproj">
+      <Project>{61c2c8d3-d6d1-4bea-b122-43142579ba35}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
